--- a/src/App.scss
+++ b/src/App.scss
@@ -1,42 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import './index.scss';
+
+.sign-up {
+  background: rgba(0, 0, 80, 0.39);
+
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.input-row {
+  display: flex;
+  width: 100%;
+  gap: 15px;
+  
+  label {
+    width: 100%;
+    input[type="email"] {
+      width: 100%;
+    
+    }
   }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+input[type="submit"] {
+  height: 50px;
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.conditions {
+  display: flex;
+  align-items: center;
 }
